[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DREAMER"
version = "0.0.1"
authors = [
  { name="Meysam Ahangaran", email="ahangar@bu.edu" },
]
description = "A computational framework to evaluate data readiness for machine learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["pandas~=1.5", 
				"numpy~=1.23",
				"scikit-learn~=1.2",
				"scipy~=1.10",
				"numba~=0.56"]

[project.urls]
"Homepage" = "https://github.com/vkola-lab/DREAMER"
